--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 - Add "copyright" information;
-- Add more skills at the bottom of the page.
+- Add more skills at the bottom of the page;
+- Add "features examples"
